--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,5 +3,6 @@
     <head th:fragment="mainHead(title)">
         <title th:text="|${title} - Voices of the City|"></title>
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" th:href="@{/css/main.css}"/>
     </head>
 </html>
