--- a/src/main/resources/templates/admin-sensor.html
+++ b/src/main/resources/templates/admin-sensor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="fragments/head :: mainHead('Administration')"/>
+    <head th:replace="fragments/head :: mainHead('Sensorer')"/>
     <body>
     <div th:replace="fragments/navigation :: standard"/>
     <h1>
