--- a/src/main/resources/templates/admin-station.html
+++ b/src/main/resources/templates/admin-station.html
@@ -2,9 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments/head :: mainHead('Stationer')"/>
     <body>
-    <div th:replace="fragments/navigation :: standard"/>
-    <h1>
-        Hej, världen
-    </h1>
+        <div th:replace="fragments/navigation :: standard"/>
+        <div class="col-xs-12">
+            <h1>
+                Stationer
+            </h1>
+            <p>Här kommer funktioner för att administrera stationer ligga.</p>
+        </div>
     </body>
 </html>
