--- a/src/main/resources/templates/admin-station-edit.html
+++ b/src/main/resources/templates/admin-station-edit.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2" for="name">Namn</label>
-                    <input class="col-sm-2" id="name" type="text" name="name"/>
+                    <input class="col-sm-2" id="name" type="text" name="name" th:value="${station.name}"/>
                 </div>
                 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span>Spara</button>
             </form>
